--- a/Junior/sunnyside-agency-landing-page-main/sass/base/_typography.scss
+++ b/Junior/sunnyside-agency-landing-page-main/sass/base/_typography.scss
@@ -7,7 +7,13 @@
    font-size: 4rem;
    letter-spacing: .75rem;
    color: $clr-white;
-   margin: 5.5rem 0;
+}
+
+.heading-2 {
+   font-family: $ff-secondary;
+   color: $clr-neutral-100;
+   font-size: 3.5rem;
+
 }
 
 //////////////////////////////////////
