--- a/Junior/sunnyside-agency-landing-page-main/sass/layout/_header.scss
+++ b/Junior/sunnyside-agency-landing-page-main/sass/layout/_header.scss
@@ -8,6 +8,9 @@
 
    &__hero {
 
+      h1 {
+         margin: 5.5rem 0;
+      }
    }
 
    &__hero-arrow {
